# interview

./: .gitignore  README.md  chopper.py  lint.sh  pyproject.toml
files/: README.md  oos.txt
img/: README.md
tests/: README.md
tests/fixtures/: one.txt  two.txt
tests/integration/: test_chopper.py
tests/unit/: test_chopper.py
