[tool.poetry]
name = "interview"
version = "0.1.0"
description = "Interview Coding Exercise"
authors = ["Nate Bohn <nathanbohn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pylint = "^2.17.5"
flake8 = "^6.1.0"
mypy = "^1.5.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
